--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Jane Doette - Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="stylesheet" type="text/css" href="responsive.css">
-    <link rel="stylesheet" type="text/css" href="final.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
   </head>
   <body>
 
@@ -33,17 +32,17 @@
           <h2 class="work__title">Featured Work</h2>
           <ul>
             <li class="work__item">
-              <img class="work__thumbnail" src="images/suika-ibuki-606431-unsplash_low.jpg" alt="Appify thumbnail preview">
+              <img class="work__thumbnail" src="img/suika-ibuki-606431-unsplash_low.jpg" alt="Appify thumbnail preview">
               <h3 class="work__thumbnail__title">Appify</h3>
               <a href="https://github.com/udacity/Appify" title="Appify project">https://github.com/udacity/Appify</a>
             </li>
             <li class="work__item">
-              <img class="work__thumbnail" src="images/thomas-quaritsch-733509-unsplash_low.jpg" alt="Sunflower thumbnail preview">
+              <img class="work__thumbnail" src="img/thomas-quaritsch-733509-unsplash_low.jpg" alt="Sunflower thumbnail preview">
               <h3 class="work__thumbnail__title">Sunflower</h3>
               <a href="https://github.com/udacity/Sunflower" title="Sunflower project">https://github.com/udacity/Sunflower</a>
             </li>
             <li class="work__item">
-              <img class="work__thumbnail" src="images/belinda-fewings-771239-unsplash_low.jpg" alt="Bokeh thumbnail preview">
+              <img class="work__thumbnail" src="img/belinda-fewings-771239-unsplash_low.jpg" alt="Bokeh thumbnail preview">
               <h3 class="work__thumbnail__title">Bokeh</h3>
               <a href="https://github.com/udacity/Bokeh" title="Bokeh project">https://github.com/udacity/Bokeh</a>
             </li>
